--- a/style.css
+++ b/style.css
@@ -71,3 +71,11 @@ Text Domain: vexvox
 .widget {
 	margin-top: 1em;
 }
+
+.site-info {
+	margin-top: 1em;
+}
+
+.post-navigation {
+	border-top: 1px solid #253431;
+}
